<resources>
    <string name="app_name">Event Master</string>
    <string name="action_menu_events">Eventos</string>
    <string name="action_menu_lecture">Palestras</string>
    <string name="action_menu_room">Salas</string>
    <string name="action_menu_search">Buscar</string>
    <string name="nenhum_evento_cadastrado">Nenhum evento cadastrado</string>
    <string name="nenhum_palestra_cadastrada">Nenhuma palestra cadastrada</string>
    <string name="nenhum_sala_cadastrada">Nenhuma sala cadastrado</string>
    <string name="cadastrar_evento">Cadastrar evento</string>
    <string name="cadastrar_palestra">Cadastrar palestra</string>
    <string name="cadastrar_novo_evento">Cadastrar novo evento</string>
    <string name="cadastrar_nova_palesta">Cadastrar nova palestra</string>
    <string name="cadastrar_nova_sala">Cadastrar nova sala</string>
    <string name="novo_evento">Novo evento</string>
    <string name="nova_palesta">Nova palestra</string>
    <string name="nova_sala">Nova sala</string>
    <string name="nome">Nome</string>
    <string name="digite_o_nome_do_evento">Digite o nome do evento</string>
    <string name="local">Local</string>
    <string name="digite_o_local_evento">Digite o local do evento</string>
    <string name="digite_a_data_evento">Digite a data do evento</string>
    <string name="data">Data</string>
    <string name="description">Descrição</string>
    <string name="digite_a_descricao_evento">Fale um pouco sobre o evento</string>
    <string name="success_event_saved">Evento salvo com sucesso</string>
    <string name="success_room_saved">Sala adicionada com sucesso</string>
    <string name="erro_ao_salvar_evento_nome_vazio">Erro ao salvar evento, o campo nome não pode ficar em branco.</string>
    <string name="erro_ao_salvar_evento_local_vazio">Erro ao salvar evento, o campo local não pode ficar em branco.</string>
    <string name="erro_ao_salvar_evento_data_vazio">Erro ao salvar evento, o campo data não pode ficar em branco.</string>
    <string name="erro_ao_salvar_evento_sala_vazia">Erro ao salvar evento, adicione pelo menos uma sala</string>
    <string name="erro_ao_salvar_evento_desconhecido">Erro ao salvar evento, tente novamente mais tarde.</string>
    <string name="erro_ao_salvar_sala_desconhecido">Erro ao salvar sala, tente novamente mais tarde.</string>
    <string name="erro_ao_salvar_sala_sem_nome">Erro ao salvar sala, o campo nome não pode ficar em branco.</string>
    <string name="erro_ao_salvar_sala_sem_capacidade">Erro ao salvar sala, a capacidade deve ser maior que 0.</string>
    <string name="erro_ao_salvar_sala_selecione_evento">Erro ao salvar sala, defina o evento da sala.</string>
    <string name="erro_ao_salvar_evento">Ocorreu um erro ao salvar o evento.</string>
    <string name="erro_carregar_eventos">Ocorreu ao carregar eventos</string>
    <string name="erro_carregar_salas">Não foi possível carregar as salas</string>
    <string name="erro_carregar_participantes">Não foi possível carregar os participantes desse evento</string>
    <string name="nenhuma_sala">Nenhuma sala</string>
    <string name="adicionar_sala">Adicionar sala</string>
    <string name="digite_o_nome_da_sala">Digite o nome da sala</string>
    <string name="salas_eventos">%d salas no evento</string>
    <string name="capacidade_sala_atual">%d pessoas</string>
    <string name="salas_cadastradas_no_evento">Salas do evento</string>
    <string name="fechar">Fechar</string>
    <string name="nao_possivel_adicionar_palestras_titulo">Não é possivel adicionar nova palestra</string>
    <string name="nao_possivel_adicionar_palestras_message">Não é possível adicionar uma nova palestra. É necessário cadastrar pelo menos um evento primeiro.</string>
    <string name="cancelar">Cancelar</string>
    <string name="definir_a_data">Definir a data</string>
    <string name="salas">Salas</string>
    <string name="nao_definido">Não definido</string>
    <string name="horario">Horário</string>
    <string name="sala">Sala</string>
    <string name="evento">Evento</string>
    <string name="eventos">Eventos</string>
    <string name="digite_o_nome_do_palestrante">Digite o nome do palestrante</string>
    <string name="palestrante">Palestrante</string>
    <string name="digite_o_titulo_da_palestra">Digite o título da palestra</string>
    <string name="titulo">Título</string>
    <string name="_00_00">00:00</string>
    <string name="erro_ao_salvar_palestra_titulo_vazio">Erro ao cadastrar palestra, o campo título não pode ficar em branco</string>
    <string name="erro_ao_salvar_palestra_palestrante_vazio">Erro ao cadastrar palestra, o campo palestrante não pode ficar em branco</string>
    <string name="erro_ao_salvar_palestra_evento_nao_definido">Erro ao cadastrar palestra, defina um evento</string>
    <string name="erro_ao_salvar_palestra_sala_nao_definida">Erro ao cadastrar palestra, defina uma sala</string>
    <string name="erro_ao_salvar_palestra_horario_definido">Erro ao cadastrar palestra, defina um horario</string>
    <string name="erro_ao_salvar_palestra_desconhecido">Erro ao cadastrar palestra, tente novamente mais tarde.</string>
    <string name="sucesso_ao_salvar_palestra">Palestra cadastrada com sucesso!</string>
    <string name="tools_text_by">Jardson Costa</string>
    <string name="by_name">por</string>
    <string name="capacidade_maxima">Capacidade máxima</string>
    <string name="pessoas">pessoas</string>
    <string name="action_menu_room_title">Selecionar data</string>
    <string name="dia">Selecione o dia</string>
    <string name="hora">Selecione o horário</string>
    <string name="escolher">Escolher</string>
    <string name="action_menu_filter">Filtrar por eventos</string>
    <string name="participantes">Participantes</string>
    <string name="sem_empresa">Sem empresa</string>
    <string name="nenhum_participante_cadastrado_nesse_evento">Nenhum participante cadastrado nesse evento</string>
    <string name="cadastrar_sala">Cadastrar sala</string>
    <string name="capacidade_m_xima">Capacidade máxima</string>
    <string name="digite_o_nome">Digite o nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="digite_o_sobrenome">Digite o sobrenome</string>
    <string name="adicionar_participante">Adicionar participante</string>
    <string name="email">E-mail</string>
    <string name="digite_o_email">Digite o e-mail</string>
    <string name="empresa">Empresa</string>
    <string name="digite_a_empresa">Digite o nome da empresa</string>
    <string name="buscar_palestra">Buscar palestra…</string>
    <string name="buscar_por">Buscar por</string>
    <string name="sem_resultado">Sem resultado</string>
    <string name="erro_carregar_palestras">Ocorreu um erro ao tentar carregar as palestras</string>
</resources>