<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_new_event"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/round_arrow_back_24"
            app:title="@string/novo_evento"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.Toolbar"
            app:titleTextColor="@color/normal_text_color" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/label_event_name"
        style="@style/TextView.Jalloft.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <EditText
        android:id="@+id/event_name_edit"
        style="@style/TextView.Jalloft.Field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edittext"
        android:hint="@string/digite_o_nome_do_evento"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/label_event_name" />

    <TextView
        android:id="@+id/label_event_location"
        style="@style/TextView.Jalloft.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_name_edit" />

    <EditText
        android:id="@+id/event_location_edit"
        style="@style/TextView.Jalloft.Field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edittext"
        android:hint="@string/digite_o_local_evento"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/label_event_location" />

    <TextView
        android:id="@+id/label_event_date"
        style="@style/TextView.Jalloft.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/event_date_edit"
        android:text="@string/data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_location_edit" />

    <TextView
        android:id="@+id/event_date_edit"
        style="@style/TextView.Jalloft.Field"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edittext"
        android:hint="@string/digite_a_data_evento"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/label_event_date" />


    <TextView
        android:id="@+id/label_event_room"
        style="@style/TextView.Jalloft.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/event_date_edit"
        android:text="@string/salas"
        android:textColor="@color/normal_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_date_edit" />

    <TextView
        android:id="@+id/event_rooms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="name"
        android:background="@drawable/shape_edittext"
        android:hint="@string/nenhuma_sala"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_room"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_add_room" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:padding="12dp"
        android:text="@string/adicionar_sala"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="#FF0051"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_event_room" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_event"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/cadastrar_evento"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_rooms"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_save_event"
        app:layout_constraintEnd_toEndOf="@id/btn_save_event"
        app:layout_constraintStart_toStartOf="@id/btn_save_event"
        app:layout_constraintTop_toTopOf="@id/btn_save_event"
        app:trackCornerRadius="100dp" />
</androidx.constraintlayout.widget.ConstraintLayout>