<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="#C1C1C1">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:contentPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_title"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Novo Participante"
                android:textColor="@color/normal_text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dialog_participante_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nome"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_title" />

            <EditText
                android:id="@+id/participante_nome_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:background="@drawable/shape_edittext"
                android:hint="@string/digite_o_nome"
                android:inputType="textCapWords"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/dialog_participante_nome" />

            <TextView
                android:id="@+id/dialog_participante_sobrenome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sobrenome"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/participante_nome_edit" />

            <EditText
                android:id="@+id/participante_sobrenome_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:background="@drawable/shape_edittext"
                android:hint="@string/digite_o_sobrenome"
                android:inputType="textCapWords"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/dialog_participante_sobrenome" />

            <TextView
                android:id="@+id/dialog_participante_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/participante_sobrenome_edit" />

            <EditText
                android:id="@+id/participante_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:background="@drawable/shape_edittext"
                android:hint="@string/digite_o_email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/dialog_participante_email" />

            <TextView
                android:id="@+id/dialog_participante_empresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/empresa"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/participante_email_edit" />

            <EditText
                android:id="@+id/participante_empresa_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:background="@drawable/shape_edittext"
                android:hint="@string/digite_a_empresa"
                android:inputType="textCapWords"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/dialog_participante_empresa" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_cancel"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/cancelar"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/btn_dialog_confirm"
                app:layout_constraintEnd_toStartOf="@id/btn_dialog_confirm"
                app:layout_constraintTop_toTopOf="@id/btn_dialog_confirm"
                app:strokeColor="#E6E6E6"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_confirm"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/adicionar_participante"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="#00A450"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/participante_empresa_edit" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>